--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,6 @@
     <title>P2-DEV-WEB</title>
 </head>
 <body>
-    
+    <p>Trabalho do Botafogo !</p>
 </body>
 </html>
