--- a/detalhes.html
+++ b/detalhes.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Elenco Profissional</h1>
     <script src="js/jogadores2023.js"></script>
-    <script src="js/jogadores.js" defer></script>
+    <script src="js/detalhes.js" defer></script>
 </body>
 </html>
