adicionei as imagens... já é um bom começo.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Jogadores</title>
+    <script src="js/jogadores2023.js"></script>
+    <script src="js/jogadores.js" defer></script>
 </head>
 <body>
     <h1>Elenco Profissional</h1>
-    <script src="js/jogadores2023.js"></script>
-    <script src="js/jogadores.js" defer></script>
+
+    <h2>Elenco Feminino</h2>
+    <div id="div-feminina"></div>
+    
+    <h2>Elenco Masculino</h2>
+    <div id="div-masculina"></div>
+
 </body>
 </html>
