--- a/detalhes.html
+++ b/detalhes.html
@@ -8,8 +8,23 @@
     <title>Detalhes</title>
 </head>
 <body>
-    <h1>Elenco Profissional</h1>
+    
+    <h1>Detalhes</h1>
+
     <script src="js/jogadores2023.js"></script>
     <script src="js/detalhes.js" defer></script>
+
+    <div id="detalhes">        
+        <img id="imagem">
+        <p id="nome"></p>
+        <p id="posicao"></p>
+        <p id="nome_completo"></p>
+        <p id="descricao"></p>
+        <p id="nascimento"></p>
+        <p id="altura"></p>
+    </div>
+
+    <a href="index.html">Voltar</a>
+
 </body>
 </html>
