--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Jogadores</title>
+    <link rel="icon" href="https://i.pinimg.com/originals/90/d1/08/90d1087eb716719ddda0a34141d797d0.png" type="image/png">
+    <title>Elenco</title>
     <script src="js/jogadores2023.js"></script>
     <script src="js/jogadores.js" defer></script>
 </head>
