acho que terminei

--- a/detalhes.html
+++ b/detalhes.html
@@ -25,7 +25,7 @@
         <p id="altura"></p>
     </div>
 
-    <a href="index.html">Voltar</a>
+    <a id="ancora" href="index.html">Voltar</a>
 
 </body>
 </html>
